--- a/styles/app/professor.styl
+++ b/styles/app/professor.styl
@@ -9,4 +9,10 @@
 
 .selectedQuestions
   font-size: 20px
-  color: #0000ff;
+  color: #0000ff
+
+.sortedGroups
+  color: #0000ff
+
+.sortedAnswers
+  color: #330000
