--- a/views/app/professor.html
+++ b/views/app/professor.html
@@ -82,6 +82,7 @@
                     <td>{{:answer.question}}</td>
                     <td>
                         <select class="select">
+                            <option>Not selected</option>
                             {#each _page.groups as :group}
                             <option selected="{equal(:answer.groupId, :group.id)}">
                                {{:group.text}}
@@ -95,15 +96,17 @@
             </tbody>
         </table>
         <h4>Answers by groups:</h4>
-        {#each _page.answersByGroups as :answerByGroups}
-            <p class="sortedGroups">Группа:</p>
-            {{groups[:answerByGroups.groupId].text}}<hr>
-                <p class="sortedAnswers">Ответы:</p>
-                {#each _page.answers as :answer}
-                    {#if equal(:answer.groupId, :answerByGroups.groupId)}
-                        <p>{{:answer.name}} - {{:answer.note}}</p>
-                {/}
-            {/}<hr>
+        {#with _page.answersByGroups}
+            {{#each _page.answersByGroups as :answerByGroups}}
+                {{#if not(equal(:answerByGroups.groupId, 'null'))}}
+                    <p class="sortedGroups">Group:</p>
+                    {{groups[:answerByGroups.groupId].text}}<hr>
+                        <p class="sortedAnswers">Answers:</p>
+                        {{#each :answerByGroups.answerIds as :answerId}}
+                                <p>{{answers[:answerId].name}}</p>
+                        {{/}}<hr>
+                {{/}}
+            {{/}}
         {/}
     </div>
 
